manifests/monitoring/httproute-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: infra
      sectionName: https
  hostnames: [alertmanager.qtlab.dev]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
