manifests/monitoring/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: https
  hostnames: [grafana.chillpickle.org]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
