manifests/monitoring/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: infra
      sectionName: https
  hostnames: [prometheus.chillpickle.org]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
